[package]
name = "vault-cert-gen"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
base64 = "0.21.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
strum = "0.25.0"
strum_macros = "0.25.1"
vaultrs = "0.7.0"
derive_more = "0.99"
governor = "0.6.0"
nonzero_ext = "0.3.0"

[dependencies.tokio]
version = "1.14.0"
features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "rt",
    "signal",
    "time",
]

[dependencies.backoff]
version = "0.4.0"
features = [
    "tokio",
]

[dependencies.clap]
version = "4.3.12"
features = ["derive"]

# [dependencies.serde]
# version = "1.0.130"
# features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]

